CRUD entity customer
